--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -306,7 +306,11 @@
 
   /* =====  SHADCN OVERRIDES */
   .shad-primary-btn {
-    @apply bg-light-200 text-blue-300 !important;
+    @apply bg-light-200 text-blue-400  w-full rounded-full !important;
+  }
+
+  .shad-primary-alt-btn {
+    @apply bg-blue-400 text-light-200 w-full rounded-full !important;
   }
 
   .shad-danger-btn {
