--- a/app/globals.css
+++ b/app/globals.css
@@ -126,8 +126,8 @@
 @layer utilities {
   /* ===== UTILITIES */
   .sidebar {
-    @apply remove-scrollbar w-full max-w-72 flex-col overflow-auto bg-black-800 px-7 py-10;
-  }
+    @apply remove-scrollbar w-full max-w-72 flex-col overflow-auto bg-black px-7 py-10;
+  }  
 
   .left-sidebar {
     @apply hidden lg:flex;
